# Top-pm-traders

./: .gitignore  README.md  copy_trader_agents.py  find_top_traders.py  requirements.txt  test_limit.py  test_rate_limit.py  test_trades.py  top_copy_candidates.html  top_copy_candidates.md  top_traders.csv  top_traders.html  top_traders.md
poly_poly_bot/: .env.example  .gitignore  Dockerfile  Makefile  README.md  backtest.py  config.py  deploy.sh  main.py  polymarket_fetcher.py  pyproject.toml  requirements.txt  telegram_bot.py  weather_data.py
poly_poly_bot/polymarket/: .env.example  .prettierignore  Dockerfile  README.md  deploy-reset.sh  deploy.sh  docker-compose.yml  eslint.config.mjs  update-env.sh  vitest.config.mts
poly_poly_bot/polymarket/.husky/: pre-push
poly_poly_bot/polymarket/docs/: README.md  code-standards.md  codebase-summary.md  project-overview-pdr.md
poly_poly_bot/polymarket/src/: auto-redeemer.ts  check-approvals.ts  config-validators.ts  config.ts  constants.ts  create-clob-client.ts  data-api-source.ts  get-balance.ts  inventory.ts  logger.ts  trade-store.ts  (+7 more)
poly_poly_bot/src/: config.py  config_validators.py  constants.py  logger.py  models.py  telegram_bot.py  utils.py
poly_poly_bot/tests/: test_config_validators.py  test_inventory.py  test_market_price.py  test_market_scheduler.py  test_odds_provider.py  test_order_verifier.py  test_pattern_detector.py  test_risk_manager.py  test_smarkets_provider.py  test_strategy_config.py  test_tiered_risk_manager.py  test_trade_queue.py  test_trade_store.py  test_utils.py  test_watchlist_alerter.py
(+124 files in other folders)
