[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "poly-poly-bot"
version = "2.0.0"
description = "Unified Polymarket Trading Bot"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=14.0.0",
    "pydantic>=2.0.0",
    "web3>=7.0.0",
    "py-clob-client>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120
